crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__number__nan_equality.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/number/nan_equality.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var nan (global @3) (/ 0.0 0.0))
   (print (== (global nan @3) 0.0))
   (print (!= (global nan @3) 1.0))
   (print (== (global nan @3) (global nan @3)))
   (print (!= (global nan @3) (global nan @3))))

----- stderr -----
